--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.21.1
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.21.2
 </pre>
     </header>
     <article>
@@ -59,6 +59,40 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.21.1
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                 <!-- ANCHOR -->
+                <!-- v14.21.2 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.21.2</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.21.2/node-v14.21.2-darwin-arm64.tar.gz">node-v14.21.2-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">30.50 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">193cf026908d7da4b72d69a45b24bb57</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        f3a6e73ccbb35e0959191163648c549f98b3e39d
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.21.2/node-v14.21.2-darwin-arm64.tar.xz">node-v14.21.2-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.81 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">9dcff0ae16a48a401980350204f597b4</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        c5bbda953d05dfd888d8fbe2af5f27ac0fa67459
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.21.2/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">ce514adfa75ef33202d6eed41bf695e3</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        d61da6b18e513f046d9da9c9c592c59fa56add53
+                    </td>
+                </tr>
                 <!-- v14.21.1 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.21.1</td>
